# banda

./: .gitignore  .pre-commit-config.yaml  AI_README.md  CONTRIBUTING.md  DESIGN.md  LICENSE  LICENSING.md  README.md  banda  code_review_report.md  environment.yaml  jobs  named-checkpoints  outputs  pyproject.toml  setup.sh  slurm-2910588.out  test_import.py  wandb
docs/: bandsplit.md  inference.md
experiment/: bandit-both-nodbm.yaml  bandit-moisesdb-dbm.yaml  bandit-moisesdb-nodbm-bass.yaml  bandit-moisesdb-nodbm-drums.yaml  bandit-moisesdb-nodbm-other.yaml  bandit-moisesdb-nodbm-vocals.yaml  bandit-moisesdb-nodbm.yaml  bandit-musdb18hq-bass.yaml  bandit-musdb18hq-dbm-bass.yaml  bandit-musdb18hq-dbm-drums.yaml  bandit-musdb18hq-dbm-other.yaml  bandit-musdb18hq-dbm-vocals.yaml  bandit-musdb18hq-dbm.yaml  bandit-musdb18hq-large.yaml  bandit-musdb18hq-nodbm-bass.yaml  bandit-musdb18hq-nodbm-drums.yaml  bandit-musdb18hq-nodbm-other.yaml  bandit-musdb18hq-nodbm-vdbo.yaml  bandit-musdb18hq-nodbm-vocals.yaml  bandit-musdb18hq-nodbm-xts.yaml  bandit-musdb18hq-nodbm.yaml  bandit-musdb18hq-vocals.yaml  bandit-musdb18hq.yaml  bandmamba-musdb18hq-nodbm-xts.yaml  bandroformer-musdb18hq-nodbm-xts.yaml  config.yaml  default.yaml  test-bandit-moisesdb-bass.yaml  test-bandit-moisesdb-drums.yaml  test-bandit-moisesdb-other.yaml  test-bandit-moisesdb-vdbo.yaml  test-bandit-moisesdb-vocals.yaml  test-bandit-musdb18hq-bass.yaml  test-bandit-musdb18hq-drums.yaml  test-bandit-musdb18hq-other.yaml  test-bandit-musdb18hq-vdbo.yaml  test-bandit-musdb18hq-vocals.yaml  test-vqbandit-moisesdb-vdbo.yaml  (+14 more)
(+5270 files in other folders)
